fix first element spacing

--- a/themes/anadea/assets/scss/_markdown.scss
+++ b/themes/anadea/assets/scss/_markdown.scss
@@ -2,12 +2,13 @@
   min-width: 0;
   font-size: clamped(16px, 18px);
 
-  :first-of-type {
+  :first-child {
     margin-top: 0;
   }
 
   img {
-    width: 100%;
+    max-width: 100%;
+    height: auto;
   }
 
   h2 {
